--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SB Admin - Start Bootstrap Template</title>
+    <title>SightSepsis</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                 Dashboard</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
             <a class="nav-link" href="#">
               <i class="fa fa-fw fa-area-chart"></i>
               <span class="nav-link-text">
@@ -55,7 +55,7 @@
               <span class="nav-link-text">
                 Tables</span>
             </a>
-          </li>
+          </li>-->
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-wrench"></i>
@@ -92,7 +92,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-sitemap"></i>
               <span class="nav-link-text">
@@ -124,7 +124,7 @@
               <span class="nav-link-text">
                 Link</span>
             </a>
-          </li>
+          </li>-->
         </ul>
         <ul class="navbar-nav sidenav-toggler">
           <li class="nav-item">
