--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 Tables</span>
             </a>
           </li>-->
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Diagnosis">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-wrench"></i>
               <span class="nav-link-text">
@@ -64,10 +64,10 @@
             </a>
             <ul class="sidenav-second-level collapse" id="collapseComponents">
               <li>
-                <a href="static-nav.html">Static Navigation</a>
+                <a href="static-nav.html">Initial Diagnosis</a>
               </li>
               <li>
-                <a href="#">Custom Card Examples</a>
+                <a href="#">Further Diagnosis</a>
               </li>
             </ul>
           </li>
@@ -383,7 +383,7 @@
             <div class="card-columns">
 
               <!-- Example Social Card -->
-              <div class="card mb-3">
+              <!--<div class="card mb-3">
                 <a href="#">
                   <img class="card-img-top img-fluid w-100" src="https://unsplash.it/700/450?image=610" alt="">
                 </a>
@@ -458,10 +458,10 @@
                 <div class="card-footer small text-muted">
                   Posted 32 mins ago
                 </div>
-              </div>
+              </div>-->
 
               <!-- Example Social Card -->
-              <div class="card mb-3">
+              <!--<div class="card mb-3">
                 <a href="#">
                   <img class="card-img-top img-fluid w-100" src="https://unsplash.it/700/450?image=180" alt="">
                 </a>
@@ -514,10 +514,10 @@
                 <div class="card-footer small text-muted">
                   Posted 46 mins ago
                 </div>
-              </div>
+              </div>-->
 
               <!-- Example Social Card -->
-              <div class="card mb-3">
+              <!--<div class="card mb-3">
                 <a href="#">
                   <img class="card-img-top img-fluid w-100" src="https://unsplash.it/700/450?image=281" alt="">
                 </a>
@@ -549,10 +549,10 @@
                 <div class="card-footer small text-muted">
                   Posted 1 hr ago
                 </div>
-              </div>
+              </div>-->
 
               <!-- Example Social Card -->
-              <div class="card mb-3">
+              <!--<div class="card mb-3">
                 <a href="#">
                   <img class="card-img-top img-fluid w-100" src="https://unsplash.it/700/450?image=185" alt="">
                 </a>
@@ -635,7 +635,7 @@
                 </div>
               </div>
 
-            </div>
+            </div>-->
             <!-- /Card Columns -->
 
           </div>
