--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
             </div>
 
             <!-- Card Columns Example Social Feed -->
-            <div class="mb-0 mt-4">
+            <!--<div class="mb-0 mt-4">
               <i class="fa fa-newspaper-o"></i>
               News Feed</div>
             <hr class="mt-2">
-            <div class="card-columns">
+            <div class="card-columns">-->
 
               <!-- Example Social Card -->
               <!--<div class="card mb-3">
@@ -638,11 +638,11 @@
             </div>-->
             <!-- /Card Columns -->
 
-          </div>
+          <!--</div>-->
 
-          <div class="col-lg-4">
+          <!--<div class="col-lg-4">-->
             <!-- Example Pie Chart Card -->
-            <div class="card mb-3">
+            <!--<div class="card mb-3">
               <div class="card-header">
                 <i class="fa fa-pie-chart"></i>
                 Pie Chart Example
@@ -653,9 +653,9 @@
               <div class="card-footer small text-muted">
                 Updated yesterday at 11:59 PM
               </div>
-            </div>
+            </div>-->
             <!-- Example Notifications Card -->
-            <div class="card mb-3">
+            <!--<div class="card mb-3">
               <div class="card-header">
                 <i class="fa fa-bell-o"></i>
                 Feed Example
@@ -716,7 +716,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <!-- Example Tables Card -->
         <div class="card mb-3">
