--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">SightSepsis</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -254,7 +254,7 @@
         </ol>
 
         <!-- Icon Cards -->
-        <div class="row">
+        <!--<div class="row">
           <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-primary o-hidden h-100">
               <div class="card-body">
@@ -327,7 +327,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <!-- Area Chart Example -->
         <div class="card mb-3">
