--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
                 Dashboard</span>
             </a>
           </li>
-          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-            <a class="nav-link" href="#">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initial Diagnosis">
+            <a class="nav-link" href="blank.html">
               <i class="fa fa-fw fa-area-chart"></i>
               <span class="nav-link-text">
-                Charts</span>
+                Initial Diagnosis</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-            <a class="nav-link" href="#">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Further Diagnosis">
+            <a class="nav-link" href="blank.html">
               <i class="fa fa-fw fa-table"></i>
               <span class="nav-link-text">
-                Tables</span>
+                Further Diagnosis</span>
             </a>
-          </li>-->
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Diagnosis">
+          </li>
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Diagnosis">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-wrench"></i>
               <span class="nav-link-text">
@@ -70,7 +70,7 @@
                 <a href="#">Further Diagnosis</a>
               </li>
             </ul>
-          </li>
+          </li>-->
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
