--- a/blank.html
+++ b/blank.html
@@ -27,9 +27,9 @@
 
   <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 
-    <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">SightSepsis</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,21 +42,21 @@
                 Dashboard</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-            <a class="nav-link" href="#">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initial Diagnosis">
+            <a class="nav-link" href="blank.html">
               <i class="fa fa-fw fa-area-chart"></i>
               <span class="nav-link-text">
-                Charts</span>
+                Initial Diagnosis</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-            <a class="nav-link" href="#">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Further Diagnosis">
+            <a class="nav-link" href="blank.html">
               <i class="fa fa-fw fa-table"></i>
               <span class="nav-link-text">
-                Tables</span>
+                Further Diagnosis</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Diagnosis">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-wrench"></i>
               <span class="nav-link-text">
@@ -64,13 +64,13 @@
             </a>
             <ul class="sidenav-second-level collapse" id="collapseComponents">
               <li>
-                <a href="static-nav.html">Static Navigation</a>
+                <a href="static-nav.html">Initial Diagnosis</a>
               </li>
               <li>
-                <a href="#">Custom Card Examples</a>
+                <a href="#">Further Diagnosis</a>
               </li>
             </ul>
-          </li>
+          </li>-->
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
@@ -92,7 +92,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-sitemap"></i>
               <span class="nav-link-text">
@@ -124,7 +124,7 @@
               <span class="nav-link-text">
                 Link</span>
             </a>
-          </li>
+          </li>-->
         </ul>
         <ul class="navbar-nav sidenav-toggler">
           <li class="nav-item">
@@ -253,7 +253,7 @@
           <li class="breadcrumb-item active">My Dashboard</li>
         </ol>
 
-        <h1>Blank Page</h1>
+        <h1>Initial Diagnosis</h1>
 
       </div>
       <!-- /.container-fluid -->
