--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Initial Diagnosis">
-            <a class="nav-link" href="blank.html">
+            <a class="nav-link" href="initial.html">
               <i class="fa fa-fw fa-area-chart"></i>
               <span class="nav-link-text">
                 Initial Diagnosis</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Further Diagnosis">
-            <a class="nav-link" href="blank.html">
+            <a class="nav-link" href="further.html">
               <i class="fa fa-fw fa-table"></i>
               <span class="nav-link-text">
                 Further Diagnosis</span>
@@ -88,7 +88,7 @@
                 <a href="forgot-password.html">Forgot Password Page</a>
               </li>
               <li>
-                <a href="blank.html">Blank Page</a>
+                <a href="initial.html">Blank Page</a>
               </li>
             </ul>
           </li>
