--- a/initial.html
+++ b/initial.html
@@ -254,6 +254,170 @@
         </ol>
 
         <h1>Initial Diagnosis</h1>
+            <section id="download" class="download bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 class="section-heading"><strong >What is it?</strong><br/>
+Sepsis is an inflammatory condition characterized by your body’s excessive immune response to a bacterial infection. It often arises from an infected wound or improperly sterilized medical equipment, and is currently the leading cause of death in US hospitals.
+</h2>
+                    <p>Services used include MIMIC III Database and AzureML</p>
+                    <table id="example" class="display" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Feature</th>
+                <th>Timestamp</th>
+                <th>Value (Integer)</th>
+                <th>Value (Binary)</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>Feature</th>
+                <th>Timestamp</th>
+                <th>Value (Integer)</th>
+                <th>Value (Binary)</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>Albumin</td>
+                <td><input type="text" id="row-1-age" name="row-1-age" value="61"></td>
+                <td><input type="text" id="row-1-position" name="row-1-position" value="System Architect"></td>
+                <td><select size="1" id="row-1-office" name="row-1-office">
+                    <option value="Edinburgh" selected="selected">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York">
+                        New York
+                    </option>
+                    <option value="San Francisco">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Biirubin</td>
+                <td><input type="text" id="row-2-age" name="row-2-age" value="63"></td>
+                <td><input type="text" id="row-2-position" name="row-2-position" value="Accountant"></td>
+                <td><select size="1" id="row-2-office" name="row-2-office">
+                    <option value="Edinburgh">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York">
+                        New York
+                    </option>
+                    <option value="San Francisco">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo" selected="selected">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>WBC</td>
+                <td><input type="text" id="row-3-age" name="row-3-age" value="66"></td>
+                <td><input type="text" id="row-3-position" name="row-3-position" value="Junior Technical Author"></td>
+                <td><select size="1" id="row-3-office" name="row-3-office">
+                    <option value="Edinburgh">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York">
+                        New York
+                    </option>
+                    <option value="San Francisco" selected="selected">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Alkaline Phosphatase</td>
+                <td><input type="text" id="row-4-age" name="row-4-age" value="22"></td>
+                <td><input type="text" id="row-4-position" name="row-4-position" value="Senior Javascript Developer"></td>
+                <td><select size="1" id="row-4-office" name="row-4-office">
+                    <option value="Edinburgh" selected="selected">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York">
+                        New York
+                    </option>
+                    <option value="San Francisco">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Creatinine</td>
+                <td><input type="text" id="row-5-age" name="row-5-age" value="33"></td>
+                <td><input type="text" id="row-5-position" name="row-5-position" value="Accountant"></td>
+                <td><select size="1" id="row-5-office" name="row-5-office">
+                    <option value="Edinburgh">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York">
+                        New York
+                    </option>
+                    <option value="San Francisco">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo" selected="selected">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Fibrinogen</td>
+                <td><input type="text" id="row-6-age" name="row-6-age" value="61"></td>
+                <td><input type="text" id="row-6-position" name="row-6-position" value="Integration Specialist"></td>
+                <td><select size="1" id="row-6-office" name="row-6-office">
+                    <option value="Edinburgh">
+                        Edinburgh
+                    </option>
+                    <option value="London">
+                        London
+                    </option>
+                    <option value="New York" selected="selected">
+                        New York
+                    </option>
+                    <option value="San Francisco">
+                        San Francisco
+                    </option>
+                    <option value="Tokyo">
+                        Tokyo
+                    </option>
+                </select></td>
+            </tr>
+        </tbody>
+    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
       </div>
       <!-- /.container-fluid -->
