--- a/initial.html
+++ b/initial.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SB Admin - Start Bootstrap Template</title>
+    <title>SightSepsis</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -254,14 +254,9 @@
         </ol>
 
         <h1>Initial Diagnosis</h1>
-            <section id="download" class="download bg-primary text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading"><strong >What is it?</strong><br/>
-Sepsis is an inflammatory condition characterized by your body’s excessive immune response to a bacterial infection. It often arises from an infected wound or improperly sterilized medical equipment, and is currently the leading cause of death in US hospitals.
-</h2>
-                    <p>Services used include MIMIC III Database and AzureML</p>
                     <table id="example" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
@@ -417,7 +412,7 @@ Sepsis is an inflammatory condition characterized by your body’s excessive imm
                 </div>
             </div>
         </div>
-    </section>
+
 
       </div>
       <!-- /.container-fluid -->
