--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             </a>
           </li>
         </ul>
-        <!--
+        
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
+          <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle mr-lg-2" href="#" id="messagesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-fw fa-envelope"></i>
               <span class="d-lg-none">Messages
@@ -232,13 +232,13 @@
                 </span>
               </div>
             </form>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
               <i class="fa fa-fw fa-sign-out"></i>
               Logout</a>
           </li>
-        </ul>-->
+        </ul>
       </div>
     </nav>
 
