--- a/index.html
+++ b/index.html
@@ -382,49 +382,50 @@
               <table class="table table-bordered" width="100%" id="dataTable" cellspacing="0">
                 <thead>
                   <tr>
-                    <th>Feature Test</th>
+                    <th>Feature</th>
                     <th>Timestamp</th>
                     <th>Value</th>
                   </tr>
                 </thead>
                 <tfoot>
                   <tr>
-                    <th>Feature Test</th>
+                    <th>Feature</th>
                     <th>Timestamp</th>
                     <th>Value</th>
                   </tr>
                 </tfoot>
                 <tbody>
                   <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
+                    <td>Albumin</td>
+                    <td><input type="text" id="row-1-time" name="row-1-time"></td>
+                    <td><input type="text" id="row-1-value" name="row-1-value"></td>
                   </tr>
                   <tr>
-                    <td>Garrett Winters</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
+                    <td>Bilirubin</td>
+                    <td><input type="text" id="row-2-time" name="row-2-time"></td>
+                    <td><input type="text" id="row-2-value" name="row-2-value"></td>
                   </tr>
                   <tr>
-                    <td>Ashton Cox</td>
-                    <td>Junior Technical Author</td>
-                    <td>San Francisco</td>
+                    <td>WBC</td>
+                    <td><input type="text" id="row-3-time" name="row-3-time"></td>
+                    <td><input type="text" id="row-3-value" name="row-3-value"></td>
                   </tr>
                   <tr>
-                    <td>Cedric Kelly</td>
-                    <td>Senior Javascript Developer</td>
-                    <td>Edinburgh</td>
+                    <td>Alkaline Phosphatase</td>
+                    <td><input type="text" id="row-4-time" name="row-4-time"></td>
+                    <td><input type="text" id="row-4-value" name="row-4-value"></td>
                   </tr>
                   <tr>
-                    <td>Airi Satou</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
+                    <td>Creatinine</td>
+                    <td><input type="text" id="row-5-time" name="row-5-time"></td>
+                    <td><input type="text" id="row-5-value" name="row-5-value"></td>
                   </tr>
                   <tr>
-                    <td>Brielle Williamson</td>
-                    <td>Integration Specialist</td>
-                    <td>New York</td>
+                    <td>Fibrinogen</td>
+                    <td><input type="text" id="row-6-time" name="row-6-time"></td>
+                    <td><input type="text" id="row-6-value" name="row-6-value"></td>
                   </tr>
+                  <!--
                   <tr>
                     <td>Herrod Chandler</td>
                     <td>Sales Assistant</td>
@@ -679,7 +680,7 @@
                     <td>Donna Snider</td>
                     <td>Customer Support</td>
                     <td>New York</td>
-                  </tr>
+                  </tr>-->
                 </tbody>
               </table>
             </div>
