--- a/initial.html
+++ b/initial.html
@@ -277,16 +277,16 @@
         <tbody>
             <tr>
                 <td>Albumin</td>
-                <td><input type="text" id="row-1-age" name="row-1-age" value="61"></td>
-                <td><input type="text" id="row-1-position" name="row-1-position" value="System Architect"></td>
+                <td><input type="text" id="row-1-age" name="row-1-age" value="2016-05-04 01-11-34"></td>
+                <td><input type="text" id="row-1-position" name="row-1-position" value="4.2"></td>
                 <td><select size="1" id="row-1-office" name="row-1-office">
-                    <option value="Edinburgh" selected="selected">
-                        Edinburgh
+                    <option value="0">
+                        0
                     </option>
-                    <option value="London">
-                        London
+                    <option value="1">
+                        1
                     </option>
-                    <option value="New York">
+                    <!--<option value="New York">
                         New York
                     </option>
                     <option value="San Francisco">
@@ -294,15 +294,21 @@
                     </option>
                     <option value="Tokyo">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
             <tr>
-                <td>Biirubin</td>
+                <td>Bilirubin</td>
                 <td><input type="text" id="row-2-age" name="row-2-age" value="63"></td>
                 <td><input type="text" id="row-2-position" name="row-2-position" value="Accountant"></td>
                 <td><select size="1" id="row-2-office" name="row-2-office">
-                    <option value="Edinburgh">
+                    <option value="0">
+                        0
+                    </option>
+                    <option value="1">
+                        1
+                    </option>                  
+                    <!--<option value="Edinburgh">
                         Edinburgh
                     </option>
                     <option value="London">
@@ -316,7 +322,7 @@
                     </option>
                     <option value="Tokyo" selected="selected">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
             <tr>
@@ -324,7 +330,13 @@
                 <td><input type="text" id="row-3-age" name="row-3-age" value="66"></td>
                 <td><input type="text" id="row-3-position" name="row-3-position" value="Junior Technical Author"></td>
                 <td><select size="1" id="row-3-office" name="row-3-office">
-                    <option value="Edinburgh">
+                    <option value="0">
+                        0
+                    </option>
+                    <option value="1">
+                        1
+                    </option>
+                  <!--<option value="Edinburgh">
                         Edinburgh
                     </option>
                     <option value="London">
@@ -338,7 +350,7 @@
                     </option>
                     <option value="Tokyo">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
             <tr>
@@ -346,7 +358,13 @@
                 <td><input type="text" id="row-4-age" name="row-4-age" value="22"></td>
                 <td><input type="text" id="row-4-position" name="row-4-position" value="Senior Javascript Developer"></td>
                 <td><select size="1" id="row-4-office" name="row-4-office">
-                    <option value="Edinburgh" selected="selected">
+                    <option value="0">
+                        0
+                    </option>
+                    <option value="1">
+                        1
+                    </option>
+                  <!--<option value="Edinburgh" selected="selected">
                         Edinburgh
                     </option>
                     <option value="London">
@@ -360,7 +378,7 @@
                     </option>
                     <option value="Tokyo">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
             <tr>
@@ -368,7 +386,13 @@
                 <td><input type="text" id="row-5-age" name="row-5-age" value="33"></td>
                 <td><input type="text" id="row-5-position" name="row-5-position" value="Accountant"></td>
                 <td><select size="1" id="row-5-office" name="row-5-office">
-                    <option value="Edinburgh">
+                    <option value="0">
+                        0
+                    </option>
+                    <option value="1">
+                        1
+                    </option>                  
+                    <!--<option value="Edinburgh">
                         Edinburgh
                     </option>
                     <option value="London">
@@ -382,7 +406,7 @@
                     </option>
                     <option value="Tokyo" selected="selected">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
             <tr>
@@ -390,7 +414,13 @@
                 <td><input type="text" id="row-6-age" name="row-6-age" value="61"></td>
                 <td><input type="text" id="row-6-position" name="row-6-position" value="Integration Specialist"></td>
                 <td><select size="1" id="row-6-office" name="row-6-office">
-                    <option value="Edinburgh">
+                    <option value="0">
+                        0
+                    </option>
+                    <option value="1">
+                        1
+                    </option>
+                  <!--<option value="Edinburgh">
                         Edinburgh
                     </option>
                     <option value="London">
@@ -404,7 +434,7 @@
                     </option>
                     <option value="Tokyo">
                         Tokyo
-                    </option>
+                    </option>-->
                 </select></td>
             </tr>
         </tbody>
