--- a/initial.html
+++ b/initial.html
@@ -277,7 +277,7 @@
         <tbody>
             <tr>
                 <td>Albumin</td>
-                <td><input type="text" id="row-1-age" name="row-1-age" value="2016-05-04 01-11-34"></td>
+                <td><input type="text" id="row-1-age" name="row-1-age" value="2016-05-04 09-11-34"></td>
                 <td><input type="text" id="row-1-position" name="row-1-position" value="4.2"></td>
                 <td><select size="1" id="row-1-office" name="row-1-office">
                     <option value="0">
@@ -299,8 +299,8 @@
             </tr>
             <tr>
                 <td>Bilirubin</td>
-                <td><input type="text" id="row-2-age" name="row-2-age" value="63"></td>
-                <td><input type="text" id="row-2-position" name="row-2-position" value="Accountant"></td>
+                <td><input type="text" id="row-2-age" name="row-2-age" value="2016-05-04 09-17-23"></td>
+                <td><input type="text" id="row-2-position" name="row-2-position" value="0.2"></td>
                 <td><select size="1" id="row-2-office" name="row-2-office">
                     <option value="0">
                         0
@@ -327,8 +327,8 @@
             </tr>
             <tr>
                 <td>WBC</td>
-                <td><input type="text" id="row-3-age" name="row-3-age" value="66"></td>
-                <td><input type="text" id="row-3-position" name="row-3-position" value="Junior Technical Author"></td>
+                <td><input type="text" id="row-3-age" name="row-3-age" value="2016-05-04 09-25-03"></td>
+                <td><input type="text" id="row-3-position" name="row-3-position" value="8349"></td>
                 <td><select size="1" id="row-3-office" name="row-3-office">
                     <option value="0">
                         0
@@ -355,8 +355,8 @@
             </tr>
             <tr>
                 <td>Alkaline Phosphatase</td>
-                <td><input type="text" id="row-4-age" name="row-4-age" value="22"></td>
-                <td><input type="text" id="row-4-position" name="row-4-position" value="Senior Javascript Developer"></td>
+                <td><input type="text" id="row-4-age" name="row-4-age" value="2017-05-04 11-05-47"></td>
+                <td><input type="text" id="row-4-position" name="row-4-position" value="124"></td>
                 <td><select size="1" id="row-4-office" name="row-4-office">
                     <option value="0">
                         0
@@ -383,8 +383,8 @@
             </tr>
             <tr>
                 <td>Creatinine</td>
-                <td><input type="text" id="row-5-age" name="row-5-age" value="33"></td>
-                <td><input type="text" id="row-5-position" name="row-5-position" value="Accountant"></td>
+                <td><input type="text" id="row-5-age" name="row-5-age" value="2017-05-04 11-09-14"></td>
+                <td><input type="text" id="row-5-position" name="row-5-position" value="0.8"></td>
                 <td><select size="1" id="row-5-office" name="row-5-office">
                     <option value="0">
                         0
@@ -411,8 +411,8 @@
             </tr>
             <tr>
                 <td>Fibrinogen</td>
-                <td><input type="text" id="row-6-age" name="row-6-age" value="61"></td>
-                <td><input type="text" id="row-6-position" name="row-6-position" value="Integration Specialist"></td>
+                <td><input type="text" id="row-6-age" name="row-6-age" value="2017-05-04 11-11-52"></td>
+                <td><input type="text" id="row-6-position" name="row-6-position" value="265"></td>
                 <td><select size="1" id="row-6-office" name="row-6-office">
                     <option value="0">
                         0
