--- a/initial.html
+++ b/initial.html
@@ -442,6 +442,12 @@
                 </div>
             </div>
         </div>
+        
+        <button onclick="myFunction()">Enter Information</button>
+        function myFunction() {
+            String txt = "Healthy! No sign of sepsis is detected.";
+        }
+
 
 
       </div>
