--- a/initial.html
+++ b/initial.html
@@ -71,7 +71,7 @@
               </li>
             </ul>
           </li>-->
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
+          <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-file"></i>
               <span class="nav-link-text">
@@ -91,7 +91,7 @@
                 <a href="initial.html">Blank Page</a>
               </li>
             </ul>
-          </li>
+          </li>-->
           <!--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-sitemap"></i>
@@ -443,10 +443,7 @@
             </div>
         </div>
         
-        <button onclick="myFunction()">Enter Information</button>
-        function myFunction() {
-            String txt = "Healthy! No sign of sepsis is detected.";
-        }
+        <button onclick="myFunction()">Submit</button>
 
 
 
@@ -489,7 +486,11 @@
         </div>
       </div>
     </div>
-
+    <script>
+        function myFunction() {
+            String txt = "Healthy! No sign of sepsis is detected.";
+        }
+    </script>  
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
